several implementation and improvements, testing remaining
